crates/plotnik-tests/tests/02-parser/recovery_validation/ref_with_field_children.txt
Expr = (identifier)
Q = (Expr name: (identifier))
------------------ DIAGNOSTICS -------------------
error: `Expr` is a reference and cannot have children
 --> query.ptk:2:11
  |
2 | Q = (Expr name: (identifier))
  |           ^^^^^^^^^^^^^^^^^^
  |
help: remove the children
  |
2 - Q = (Expr name: (identifier))
2 + Q = (Expr )
  |
help: a reference reuses a definition as a whole: write `(Expr)`, or define a node kind to add children
